# split-maze

./: .gitignore  LICENSE  PLAN.md  README.en.md  README.ja.md  README.md  README.zh.md  pyproject.toml  requirements.txt
docs/: LANGUAGE_SPEC.md  NEXT_RESEARCH_PROMPT.md  PREREG_grounded_confab.md  PROCGEN_ENV.md  RESULTS.html  SESSION_HANDOFF.md  index.html
logs/: lm.jsonl  maze_aisc_full.jsonl  maze_aisc_full.stdout  maze_aisc_mid.jsonl  phase3.jsonl  phase3_mid.jsonl  phase3_smoke.jsonl
results/: in_dist.json  lm_gate.json  ood.json  phase3_in_dist.json  phase4_builds.json  phase4_ctrl2x2.json  phase4_swap.json  phase5_ccm.json  phase5_ccm_ablation.json  phase5_ccm_brain_a1long_s1.json  phase5_ccm_brain_a1long_s2.json  phase5_ccm_brain_a1long_s3.json  phase5_ccm_brain_a2_s1.json  phase5_ccm_brain_a2_s2.json  phase5_ccm_brain_a2_s3.json  phase5_ccm_sanity.json  phase5_ccm_step2.json  phase5_ccm_step2_v2.json  phase5_ccm_step3_a1.json  phase5_ccm_step3_a1_long.json  phase5_ccm_step3_a1long_s1.json  phase5_ccm_step3_a1long_s2.json  phase5_ccm_step3_a1long_s3.json  phase5_ccm_step3_a1long_s4.json  phase5_ccm_step3_a1long_s5.json  phase5_ccm_step3_a2.json  phase5_ccm_step3_a2_s1.json  phase5_ccm_step3_a2_s2.json  phase5_ccm_step3_a2_s3.json  phase5_ccm_step3_a2_s4.json  phase5_ccm_step3_a2_s5.json  pilot_grounding.json  r2_p2.json  regimes_baseline.json
scripts/: agg_brains.py  agg_step3_seeds.py  ccm_sanity.py  ceiling_v2.py  check_env.py  diagnose_v2.py  eval_builds.py  eval_r2.py  eval_regimes.py  evaluate.py  fit_2x2.py  fit_ccm.py  pilot_grounding.py  run_pilot.sh  (+13 more)
(+35 files in other folders)
